--- a/index.html
+++ b/index.html
@@ -34,16 +34,25 @@
                     <h3 class="h4 mb-4"><i class="bi bi-person-fill"></i> Thông tin của bạn</h3>
                     <form id="calculator-form">
                         <div class="mb-3">
-                            <label class="form-label">Cân nặng (kg)</label>
-                            <input type="number" id="weight" class="form-control" placeholder="Ví dụ: 80" required>
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <label class="form-label mb-0">Cân nặng (kg)</label>
+                                <span id="weight-val" class="fw-bold text-primary">90</span>
+                            </div>
+                            <input type="range" id="weight" class="form-range" min="1" max="300" step="1" value="90">
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Chiều cao (cm)</label>
-                            <input type="number" id="height" class="form-control" placeholder="Ví dụ: 170" required>
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <label class="form-label mb-0">Chiều cao (cm)</label>
+                                <span id="height-val" class="fw-bold text-primary">170</span>
+                            </div>
+                            <input type="range" id="height" class="form-range" min="1" max="350" step="1" value="170">
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Tuổi</label>
-                            <input type="number" id="age" class="form-control" placeholder="Ví dụ: 25" required>
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <label class="form-label mb-0">Tuổi</label>
+                                <span id="age-val" class="fw-bold text-primary">18</span>
+                            </div>
+                            <input type="range" id="age" class="form-range" min="1" max="100" step="1" value="18">
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Giới tính</label>
