--- a/index.html
+++ b/index.html
@@ -81,11 +81,17 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Giới tính</label>
-                            <select id="gender" class="form-select">
-                                <option value="male">Nam</option>
-                                <option value="female">Nữ</option>
-                            </select>
+                            <label class="form-label d-block">Giới tính</label>
+                            <div class="d-flex gap-4">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="gender" id="gender-female" value="female" checked>
+                                    <label class="form-check-label" for="gender-female">Nữ</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="gender" id="gender-male" value="male">
+                                    <label class="form-check-label" for="gender-male">Nam</label>
+                                </div>
+                            </div>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Mức độ hoạt động</label>
