fix: split food data to other file

--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
 
     <!-- Moment.js CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <!-- Food Data JS (Must be loaded before script.js) -->
+    <script src="food-data.js"></script>
     <!-- Script JS -->
     <script src="script.js"></script>
 </body>
