fix: add gain weight

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                                 <option value="lose-slow">Giảm cân chậm (0.25kg/tuần)</option>
                                 <option value="lose-medium" selected>Giảm cân vừa (0.5kg/tuần)</option>
                                 <option value="lose-fast">Giảm cân nhanh (1kg/tuần)</option>
+                                <option value="gain-slow">Tăng cân chậm (0.25kg/tuần)</option>
+                                <option value="gain-medium">Tăng cân vừa (0.5kg/tuần)</option>
+                                <option value="gain-fast">Tăng cân nhanh (1kg/tuần)</option>
                             </select>
                         </div>
                         <button type="submit" class="btn btn-primary w-100 py-3 fw-bold">Tính toán thực đơn</button>
