--- a/index.html
+++ b/index.html
@@ -102,7 +102,20 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Mức độ hoạt động</label>
+                            <label class="form-label">
+                                Mức độ hoạt động
+                                <span class="position-relative d-inline-block ms-1 tooltip-trigger">
+                                    <i class="bi bi-question-circle help-icon"></i>
+                                    <div class="custom-tooltip" style="width: 280px; font-weight: normal;">
+                                        <strong>Chỉ số PAL (Physical Activity Level):</strong><br>
+                                        • <strong>1.2:</strong> Người ít vận động, làm việc văn phòng.<br>
+                                        • <strong>1.375:</strong> Tập nhẹ (1-3 ngày/tuần).<br>
+                                        • <strong>1.55:</strong> Tập vừa (3-5 ngày/tuần).<br>
+                                        • <strong>1.725:</strong> Tập nặng (6-7 ngày/tuần).<br>
+                                        • <strong>1.9:</strong> Vận động viên chuyên nghiệp.
+                                    </div>
+                                </span>
+                            </label>
                             <select id="activity" class="form-select">
                                 <option value="1.2">Ít vận động (Văn phòng)</option>
                                 <option value="1.375">Vận động nhẹ (1-3 ngày/tuần)</option>
