--- a/index.html
+++ b/index.html
@@ -12,7 +12,57 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FitPlan - Công cụ giảm cân chuyên nghiệp</title>
+    <title>FitPlan - Công cụ tính toán & Xây dựng thực đơn giảm cân khoa học</title>
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="FitPlan là công cụ miễn phí giúp tính toán TDEE, BMR, BMI và xây dựng thực đơn giảm cân cá nhân hóa 7 ngày. Khoa học, dễ sử dụng và hiệu quả cho người Việt.">
+    <meta name="keywords" content="giảm cân, thực đơn giảm cân, tính TDEE, tính BMR, tính BMI, meal planner, diet plan, thực đơn eat clean, giảm cân khoa học, FitPlan">
+    <meta name="author" content="FitPlan Team">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://anhdiepmmk.github.io/fit-plan/">
+    <meta property="og:title" content="FitPlan - Xây dựng thực đơn giảm cân cá nhân hóa">
+    <meta property="og:description" content="Tính toán chỉ số cơ thể và nhận thực đơn giảm cân 7 ngày miễn phí chỉ trong 1 phút.">
+    <meta property="og:image" content="https://anhdiepmmk.github.io/fit-plan/social_preview.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://anhdiepmmk.github.io/fit-plan/">
+    <meta name="twitter:title" content="FitPlan - Xây dựng thực đơn giảm cân cá nhân hóa">
+    <meta name="twitter:description" content="Tính toán chỉ số cơ thể và nhận thực đơn giảm cân 7 ngày miễn phí chỉ trong 1 phút.">
+    <meta name="twitter:image" content="https://anhdiepmmk.github.io/fit-plan/social_preview.png">
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="canonical" href="https://anhdiepmmk.github.io/fit-plan/">
+
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "FitPlan",
+      "applicationCategory": "HealthApplication",
+      "operatingSystem": "Any",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "VND"
+      },
+      "description": "FitPlan là công cụ miễn phí giúp tính toán TDEE, BMR, BMI và gợi ý thực đơn giảm cân khoa học.",
+      "featureList": "Tính TDEE, Tính BMI, Tính BMR, Gợi ý thực đơn 7 ngày",
+      "author": {
+        "@type": "Organization",
+        "name": "FitPlan"
+      },
+      "image": "https://anhdiepmmk.github.io/fit-plan/social_preview.png"
+    }
+    </script>
+
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
@@ -21,8 +71,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
-    <!-- Favicon -->
-    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
     <div class="background-blobs">
@@ -41,7 +89,7 @@
             <!-- Input Section -->
             <div class="col-lg-4">
                 <div class="glass-card p-4 h-100">
-                    <h3 class="h4 mb-4"><i class="bi bi-person-fill"></i> Thông tin của bạn</h3>
+                    <h2 class="h4 mb-4"><i class="bi bi-person-fill"></i> Thông tin của bạn</h2>
                     <form id="calculator-form">
                         <div class="mb-3">
                             <div class="d-flex justify-content-between align-items-center mb-2">
@@ -145,7 +193,7 @@
             <div class="col-lg-8">
                 <div id="results-section" class="d-none">
                     <div class="glass-card p-4 mb-4">
-                        <h3 class="h4 mb-4">Chỉ số của bạn</h3>
+                        <h2 class="h4 mb-4">Chỉ số của bạn</h2>
                         <div class="row text-center">
                             <div class="col-md-3 mb-3 mb-md-0">
                                 <div class="stat-box">
@@ -205,7 +253,7 @@
                         </div>
                     </div>
 
-                    <h3 class="h4 mb-3 px-2">Thực đơn gợi ý cho 1 tuần</h3>
+                    <h2 class="h4 mb-3 px-2">Thực đơn gợi ý cho 1 tuần</h2>
                     <div id="meal-plan-container" class="row g-3">
                         <!-- Meal cards will be injected here -->
                     </div>
