--- a/index.html
+++ b/index.html
@@ -274,5 +274,6 @@
     <script src="food-data.js"></script>
     <!-- Script JS -->
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </body>
 </html>
