--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                 <div id="results-section" class="d-none">
                     <div class="glass-card p-4 mb-4">
                         <h2 class="h4 mb-4">Chỉ số của bạn</h2>
-                        <div class="row text-center">
-                            <div class="col-md-3 mb-3 mb-md-0">
+                        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-2 g-md-3 text-center">
+                            <div class="col">
                                 <div class="stat-box bmi">
                                     <span class="d-block text-muted small">
                                         BMI <i class="bi bi-question-circle help-icon"></i>
@@ -212,7 +212,7 @@
                                     <span id="bmi-status" class="d-block small">--</span>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3 mb-md-0">
+                            <div class="col">
                                 <div class="stat-box bmr">
                                     <span class="d-block text-muted small">
                                         BMR <i class="bi bi-question-circle help-icon"></i>
@@ -224,7 +224,7 @@
                                     <span id="bmr-val" class="h3 fw-bold text-info">--</span>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3 mb-md-0">
+                            <div class="col">
                                 <div class="stat-box tdee">
                                     <span class="d-block text-muted small">
                                         TDEE <i class="bi bi-question-circle help-icon"></i>
@@ -236,7 +236,20 @@
                                     <span id="tdee-val" class="h3 fw-bold text-primary">--</span>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col">
+                                <div class="stat-box water">
+                                    <span class="d-block text-muted small">
+                                        Nước <i class="bi bi-question-circle help-icon"></i>
+                                        <div class="custom-tooltip">
+                                            <strong>Lượng nước khuyến nghị:</strong><br>
+                                            Tính toán dựa trên cân nặng, độ tuổi và mức độ vận động hàng ngày để bù đắp lượng nước mất đi.
+                                        </div>
+                                    </span>
+                                    <span id="water-val" class="h3 fw-bold text-info">--</span>
+                                    <span class="d-block small">Lít / Ngày</span>
+                                </div>
+                            </div>
+                            <div class="col">
                                 <div class="stat-box target">
                                     <span class="d-block text-muted small">
                                          Mục tiêu <i class="bi bi-question-circle help-icon"></i>
@@ -277,6 +290,54 @@
         </div>
     </div>
 
+    <!-- Water Warning Modal -->
+    <div class="modal fade" id="waterWarningModal" tabindex="-1" aria-labelledby="waterWarningModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content glass-card border-0">
+                <div class="modal-header border-0 pb-0">
+                    <h5 class="modal-title fw-bold text-danger" id="waterWarningModalLabel">
+                        <i class="bi bi-exclamation-triangle-fill me-2"></i> Lưu ý quan trọng cho cân nặng lớn
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body pt-3">
+                    <p>Dù công thức đưa ra con số cao, bạn cần đặc biệt lưu ý các nguyên tắc an toàn sau để tránh gây áp lực quá tải cho thận:</p>
+                    <ul class="list-unstyled">
+                        <li class="mb-3 d-flex align-items-start">
+                            <i class="bi bi-check2-circle text-primary me-2 mt-1"></i>
+                            <div>
+                                <strong>Không uống quá nhiều cùng lúc:</strong> Thận chỉ có thể đào thải tối đa khoảng <strong>0.8 - 1 lít nước mỗi giờ</strong>.
+                            </div>
+                        </li>
+                        <li class="mb-3 d-flex align-items-start">
+                            <i class="bi bi-check2-circle text-primary me-2 mt-1"></i>
+                            <div>
+                                <strong>Lắng nghe cơ thể:</strong> Có thể bắt đầu với mức <strong>3.7 - 4 lít</strong> và điều chỉnh dần dựa trên màu sắc nước tiểu (vàng nhạt là lý tưởng).
+                            </div>
+                        </li>
+                        <li class="mb-3 d-flex align-items-start">
+                            <i class="bi bi-check2-circle text-primary me-2 mt-1"></i>
+                            <div>
+                                <strong>Bổ sung điện giải:</strong> Với lượng nước lớn trên 5 lít, hãy cân nhắc bổ sung nước có chứa điện giải thay vì chỉ uống nước lọc.
+                            </div>
+                        </li>
+                        <li class="d-flex align-items-start text-muted small">
+                            <i class="bi bi-info-circle me-2 mt-1"></i>
+                            <div>
+                                <strong>Tham khảo ý kiến bác sĩ:</strong> Bạn nên hỏi ý kiến bác sĩ về tình trạng chức năng thận trước khi duy trì mức uống trên 5 lít nước/ngày.
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="modal-footer border-0 pt-0">
+                    <button type="button" class="btn btn-primary w-100 rounded-pill" data-bs-dismiss="modal">Tôi đã hiểu</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap 5 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Moment.js CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <!-- Food Data JS (Must be loaded before script.js) -->
