--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,6 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'G-W4628J2QHD');
     </script>
     <meta charset="UTF-8">
@@ -69,10 +68,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <!-- Style CSS -->
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    {{> navbar}}
+
     <div class="background-blobs">
         <div class="blob blob-1"></div>
         <div class="blob blob-2"></div>
@@ -202,7 +201,7 @@
                                         <div class="custom-tooltip">
                                             <strong>BMI (Chỉ số khối cơ thể):</strong><br>
                                             Công thức: Cân nặng / (Chiều cao/100)²<br>
-                                            • < 18.5: Gầy<br>
+                                            • &lt; 18.5: Gầy<br>
                                             • 18.5 - 24.9: Bình thường<br>
                                             • 25 - 29.9: Tiền béo phì<br>
                                             • ≥ 30: Béo phì
@@ -340,10 +339,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Moment.js CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-    <!-- Food Data JS (Must be loaded before script.js) -->
-    <script src="food-data.js"></script>
-    <!-- Script JS -->
-    <script src="script.js"></script>
+    <!-- html2canvas CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <!-- Page JS (Vite entry) -->
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
