feat: update language for bmi wheels

--- a/src/pages/bmi.html
+++ b/src/pages/bmi.html
@@ -138,16 +138,16 @@
 
                                     <!-- Category Labels (On the arc) -->
                                     <text class="category-label text-dark" dy="-5">
-                                        <textPath href="#text-curve" startOffset="7%" text-anchor="middle">Underweight</textPath>
+                                        <textPath href="#text-curve" startOffset="7%" text-anchor="middle">Gầy</textPath>
                                     </text>
                                     <text class="category-label text-dark" dy="-5">
-                                        <textPath href="#text-curve" startOffset="27%" text-anchor="middle">Normal</textPath>
+                                        <textPath href="#text-curve" startOffset="27%" text-anchor="middle">Bình thường</textPath>
                                     </text>
                                     <text class="category-label text-dark fw-bold" dy="-5">
-                                        <textPath href="#text-curve" startOffset="50%" text-anchor="middle">Overweight</textPath>
+                                        <textPath href="#text-curve" startOffset="50%" text-anchor="middle">Thừa cân</textPath>
                                     </text>
                                     <text class="category-label text-dark" dy="-5">
-                                        <textPath href="#text-curve" startOffset="80%" text-anchor="middle">Obesity</textPath>
+                                        <textPath href="#text-curve" startOffset="80%" text-anchor="middle">Béo phì</textPath>
                                     </text>
                                     
                                     <!-- Needle Group -->
