--- a/src/pages/bmi.html
+++ b/src/pages/bmi.html
@@ -70,12 +70,9 @@
                                     <input type="number" class="form-control" id="weight" min="10" max="500" step="0.1" value="65" required>
                                     <div class="invalid-feedback">Vui lòng nhập cân nặng hợp lệ</div>
                                 </div>
-                                <div class="d-flex gap-2">
-                                    <button type="submit" class="btn btn-primary flex-grow-1 py-2 fw-bold">
+                                <div text-center>
+                                    <button type="submit" class="btn btn-primary w-100 py-2 fw-bold">
                                         <i class="bi bi-calculator me-1"></i> Tính toán
-                                    </button>
-                                    <button type="button" id="btn-clear" class="btn btn-outline-secondary py-2">
-                                        <i class="bi bi-arrow-counterclockwise"></i> Làm mới
                                     </button>
                                 </div>
                             </form>
@@ -171,23 +168,28 @@
                             
                             <!-- Additional Info -->
                             <div id="bmi-details" class="mt-4">
-                                <!-- <h3 class="h6 mb-3 text-center">Thông tin bổ sung</h3> -->
                                 <div class="row g-3">
+                                    <div class="col-12">
+                                        <div class="info-box h-100">
+                                            <span class="info-label">Mục tiêu cân nặng</span>
+                                            <span id="weight-goal" class="info-value">--</span>
+                                        </div>
+                                    </div>
                                     <div class="col-6">
                                         <div class="info-box h-100">
-                                            <span class="info-label">Khoảng BMI lý tưởng</span>
+                                            <span class="info-label">Khoảng BMI lành mạnh</span>
                                             <span class="info-value">18.5 – 25 kg/m²</span>
                                         </div>
                                     </div>
                                     <div class="col-6">
                                         <div class="info-box h-100">
-                                            <span class="info-label">Cân nặng lý tưởng</span>
+                                            <span class="info-label">Cân nặng lành mạnh</span>
                                             <span id="healthy-weight" class="info-value">--</span>
                                         </div>
                                     </div>
                                     <div class="col-6">
                                         <div class="info-box h-100">
-                                            <span class="info-label">Tỷ số BMI</span>
+                                            <span class="info-label">BMI Prime</span>
                                             <span id="bmi-prime" class="info-value">--</span>
                                         </div>
                                     </div>
